; ModuleID = '/home/carl/AnghaBench/php-src/ext/standard/extr_password.c_php_password_algo_identify_ex.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/standard/extr_password.c_php_password_algo_identify_ex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 (i32*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_5__* @php_password_algo_identify_ex(i32* %0, %struct.TYPE_5__* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32* @php_password_algo_extract_ident(i32* %8)
  store i32* %9, i32** %7, align 8
  %10 = load i32*, i32** %7, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %14, label %12

12:                                               ; preds = %2
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  store %struct.TYPE_5__* %13, %struct.TYPE_5__** %3, align 8
  br label %39

14:                                               ; preds = %2
  %15 = load i32*, i32** %7, align 8
  %16 = call %struct.TYPE_5__* @php_password_algo_find(i32* %15)
  store %struct.TYPE_5__* %16, %struct.TYPE_5__** %6, align 8
  %17 = load i32*, i32** %7, align 8
  %18 = call i32 @zend_string_release(i32* %17)
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %20 = icmp ne %struct.TYPE_5__* %19, null
  br i1 %20, label %21, label %33

21:                                               ; preds = %14
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 0
  %24 = load i32 (i32*)*, i32 (i32*)** %23, align 8
  %25 = icmp ne i32 (i32*)* %24, null
  br i1 %25, label %26, label %35

26:                                               ; preds = %21
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 0
  %29 = load i32 (i32*)*, i32 (i32*)** %28, align 8
  %30 = load i32*, i32** %4, align 8
  %31 = call i32 %29(i32* %30)
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %35, label %33

33:                                               ; preds = %26, %14
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  br label %37

35:                                               ; preds = %26, %21
  %36 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  br label %37

37:                                               ; preds = %35, %33
  %38 = phi %struct.TYPE_5__* [ %34, %33 ], [ %36, %35 ]
  store %struct.TYPE_5__* %38, %struct.TYPE_5__** %3, align 8
  br label %39

39:                                               ; preds = %37, %12
  %40 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  ret %struct.TYPE_5__* %40
}

declare dso_local i32* @php_password_algo_extract_ident(i32*) #1

declare dso_local %struct.TYPE_5__* @php_password_algo_find(i32*) #1

declare dso_local i32 @zend_string_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
